# Projet-reconnaissance-faciale---MF

./: CMakeLists.txt  DatabaseManager.h  IndividuSQL.h  PCA.cpp  PCA.h  PhotoSQL.h  PhotoService.h  Prep.cpp  Preprocesseur.cpp  Preprocesseur.h  README.md  RecognitionPipeline.cpp  RecognitionPipeline.h  image.sql  main.cpp  mainFinal.cpp  mainIHM.cpp  mainPerformancesTest.cpp  mainSeuil.cpp  main_BDD.cpp  main_Loic.cpp  main_Reconnaissance.cpp  mainwindow.cpp  mainwindow.h
Code/: LDA.cpp  LDA.h  PCA.cpp  PCA.h
PCA_LDA/: LDA.cpp  LDA.h  PCA.cpp  PCA.h
RecognitionPipeline/: RecognitionPipeline.cpp  RecognitionPipeline.h
apps/: ajouter_photo.cpp
models/: Individu.h  Photo.h
